Don't accept non-patch files

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="gradient-border" id="drop-zone">
         Place Your Patch Here
     </div>
-    <input type="file" id="file-selector">
+    <input type="file" id="file-selector" accept=".patch">
     <script src="./index.js"></script>
 </body>
 </html>
